trying different build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ python:
 # command to install dependencies
 install:
 
-script: 
-  - python -m unittest discover -v ./ci_play/ # command to run unit test
+#script: 
+#  - python -m unittest discover -v ./ci_play/ # command to run unit test
