--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 
+#which versions of python to test against
 python:
   - "2.7"
   - "3.7"
 
+# command to install dependencies
 install:
-  - pip install -r requirements.txt
 
 script: 
-  - pytest
+  - python -m unittest discover -v ./ci_play/ # command to run unit test
